--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <meta charset="utf-8" />
     <script type='text/javascript'
-        src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=[your-api-key]'
+        src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=Aitz_1T6vqZgKRh9ZuTQVeBV5g2Zp6-s5vXnX2ICHtZKw_YxhYds7-rQ28ZKwkgV'
         async defer></script>
 
     <!-- ref: https://docs.microsoft.com/en-us/bingmaps/v8-web-control/map-control-concepts/pushpins/pushpin-hover-style: -->
