--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <ul>
-        <li><a href='map.html'>School Shootings Map</a></li>
-    </ul>
+<body>
+    <h1>Hello World</h1>
+    <p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
