--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <ul>
+        <li>Right click on <a href='map.html'>here</a> and "Save link as"</li>
+        <li>Open the downloaded file in a browser</li>
+    </ul>
 </body>
 </html>
