--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
+    <h1>School Shootings Map</h1>
+    <p>To view the map on your computer, follow the steps below.</p>
     <ul>
         <li>Right click on <a href='map.html'>here</a> and "Save link as"</li>
         <li>Open the downloaded file in a browser</li>
+        <li>View the map</li>
     </ul>
 </body>
 </html>
