--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <meta charset="utf-8" />
     <script type='text/javascript'
-        src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=[your-api-key]'
+        src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=ArO3MKikHPdnbj-UywBfckB4OSlntXrsBnV6C1HQBNnl7Mz5UbsaN_qmJ8mm5EX9'
         async defer></script>
 
     <!-- ref: https://docs.microsoft.com/en-us/bingmaps/v8-web-control/map-control-concepts/pushpins/pushpin-hover-style: -->
