--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <title></title>
+    <meta charset="utf-8" />
+    <script type='text/javascript'
+        src='//www.bing.com/api/maps/mapcontrol?callback=GetMap&key=[your-api-key]'
+        async defer></script>
+
+    <!-- ref: https://docs.microsoft.com/en-us/bingmaps/v8-web-control/map-control-concepts/pushpins/pushpin-hover-style: -->
+
+    <script type='text/javascript'>
+        function GetMap() {
+            var url = 'https://raw.githubusercontent.com/data2maps/data2maps.github.io/main/data.json';
+            fetch(url)
+                .then((r) => r.json())
+                .then((d) => {
+                    var map = new Microsoft.Maps.Map('#myMap');
+                    var locations = [];
+                    data = d;
+
+                    for (var i = 0; i < data.length; i++) {
+                        console.log(i);
+                        locations.push(
+                            {
+                                "location": new Microsoft.Maps.Location(data[i].LATITUDE, data[i].LONGITUDE),
+                                "locationInfo": {
+                                    "title": data[i].SCHOOL,
+                                    "subTitle": data[i].DATE + ' (' + data[i].DEATHS + ' deaths)',
+                                    "text": data[i].DEATHS,
+                                }
+                            }
+                        );
+                    }
+
+                    var rect = Microsoft.Maps.LocationRect.fromLocations([locations[0].location, locations[1].location]);
+
+                    locations.forEach((location, idx) => {
+                        var pin = new Microsoft.Maps.Pushpin(location.location, location.locationInfo);
+
+                        map.entities.push(pin);
+                    });
+
+                    map.setView({ bounds: rect, padding: 80 });
+                });
+        }
+    </script>
+</head>
+
 <body>
-    <h1>School Shootings Map</h1>
-    <p>To view the map on your computer, follow the steps below.</p>
-    <ul>
-        <li>Right click on <a href='map.html'>here</a> and "Save link as"</li>
-        <li>Open the downloaded file in a browser</li>
-        <li>View the map</li>
-    </ul>
+    <div id="myMap" style="position:relative;width:100%;height:100%;"></div>
 </body>
+
 </html>
