--- a/school-shootings.html
+++ b/school-shootings.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title></title>
+    <title>School Shootings</title>
     <meta charset="utf-8" />
     <script type='text/javascript'
             src='//www.bing.com/api/maps/mapcontrol?callback=GetMap&key=[your-api-key]'
