--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <h1>Data Maps</h1>
     <ul>
         <li><a href="school-shootings.html">School Shootings</a></li>
         <li><a href="bank-failures.html">Bank Failures</a></li>
