--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <title>Data Maps</title>
     <meta charset="utf-8" />
+    <script type="text/javascript">
+        if (window.location.href.startsWith("file:///")) {
+            window.location.replace("http://localhost/data2maps/");
+        }
+    </script>
 </head>
 
 <body>
