--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>Data Maps</title>
     <meta charset="utf-8" />
     <script type="text/javascript">
+        (function (c, l, a, r, i, t, y) {
+            c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+            t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+            y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+        })(window, document, "clarity", "script", "h0cmoe25mo");
+    </script>
+    <script type="text/javascript">
         if (window.location.href.startsWith("file:///")) {
             window.location.replace("http://localhost/data2maps/");
         }
@@ -14,8 +21,8 @@
 <body>
     <h1>Data Maps</h1>
     <ul>
-        <li><a href="school-shootings.html">School Shootings</a></li>
-        <li><a href="bank-failures.html">Bank Failures</a></li>
+        <li><a href="school-shootings.html?d=school-shootings">School Shootings</a></li>
+        <li><a href="bank-failures.html?d=bank-failtures">Bank Failures</a></li>
     </ul>
 </body>
 
