--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <body>
     <h1>Data Maps</h1>
     <ul>
-        <li><a href="school-shootings.html?d=school-shootings">School Shootings</a></li>
-        <li><a href="bank-failures.html?d=bank-failtures">Bank Failures</a></li>
+        <li><a href="d2m.html?d=school-shootings">School Shootings</a></li>
+        <li><a href="d2m.html?d=bank-failtures">Bank Failures</a></li>
     </ul>
 </body>
 
