--- a/d2m.html
+++ b/d2m.html
@@ -4,19 +4,26 @@
 <head>
     <title>School Shootings</title>
     <meta charset="utf-8" />
-    <script type='text/javascript'
-            src='//www.bing.com/api/maps/mapcontrol?callback=GetMap&key=[your-api-key]'
+    <script type="text/javascript">
+        (function (c, l, a, r, i, t, y) {
+            c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+            t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+            y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+        })(window, document, "clarity", "script", "h0cmoe25mo");
+    </script>
+    <script type="text/javascript"
+            src="//www.bing.com/api/maps/mapcontrol?callback=GetMap&key=ArO3MKikHPdnbj-UywBfckB4OSlntXrsBnV6C1HQBNnl7Mz5UbsaN_qmJ8mm5EX9"
             async defer></script>
 
     <!-- ref: https://docs.microsoft.com/en-us/bingmaps/v8-web-control/map-control-concepts/pushpins/pushpin-hover-style: -->
 
     <script type='text/javascript'>
-        function GetMap() {            
-            var url = new URL(window.location.href).pathname.split('/').pop().split('.')[0] + ".json";
+        function GetMap() {
+            var url = new URL(window.location).searchParams.get("d") + ".json";
             fetch(url)
                 .then((r) => r.json())
                 .then((d) => {
-                    var map = new Microsoft.Maps.Map('#myMap');
+                    var map = new Microsoft.Maps.Map("#myMap");
                     var locations = [];
                     data = d;
 
@@ -27,7 +34,7 @@
                                 "location": new Microsoft.Maps.Location(data[i].LATITUDE, data[i].LONGITUDE),
                                 "locationInfo": {
                                     "title": data[i].SCHOOL,
-                                    "subTitle": data[i].DATE + ' (' + data[i].DEATHS + ' deaths)',
+                                    "subTitle": data[i].DATE + " (" + data[i].DEATHS + " deaths)",
                                     "text": data[i].DEATHS,
                                 }
                             }
