--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Data Maps</title>
+    <title>data2maps</title>
     <meta charset="utf-8" />
     <script type="text/javascript">
         (function (c, l, a, r, i, t, y) {
@@ -19,10 +19,10 @@
 </head>
 
 <body>
-    <h1>Data Maps</h1>
+    <h1>data2maps</h1>
     <ul>
-        <li><a href="d2m.html?d=school-shootings">School Shootings</a></li>
-        <li><a href="d2m.html?d=bank-failtures">Bank Failures</a></li>
+        <li><a href="d2m.html?d=school-shootings">school shootings</a></li>
+        <li><a href="d2m.html?d=bank-failtures">bank failures</a></li>
     </ul>
 </body>
 
