--- a/d2m.html
+++ b/d2m.html
@@ -4,6 +4,7 @@
 <head>
     <title></title>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <script type="text/javascript">
         (function (c, l, a, r, i, t, y) {
             c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
