--- a/d2m.html
+++ b/d2m.html
@@ -26,35 +26,38 @@
             document.title = d.replace("-", " ");
 
             fetch(url)
-                .then((r) => r.json())
-                .then((d) => {
-                    var map = new Microsoft.Maps.Map("#myMap");
-                    var locations = [];
-                    data = d;
+                .then(r => { if (!r.ok) { return null; } return r.json() })
+                .then(d => {
+                    if (!d) { document.write("Under Construction"); }
+                    else {
+                        var map = new Microsoft.Maps.Map("#myMap");
+                        var locations = [];
+                        data = d;
 
-                    for (var i = 0; i < data.length; i++) {
-                        //console.log(i);
-                        locations.push(
-                            {
-                                "location": new Microsoft.Maps.Location(data[i].LATITUDE, data[i].LONGITUDE),
-                                "locationInfo": {
-                                    "title": data[i].SCHOOL,
-                                    "subTitle": data[i].DATE + " (" + data[i].DEATHS + " deaths)",
-                                    "text": data[i].DEATHS,
+                        for (var i = 0; i < data.length; i++) {
+                            //console.log(i);
+                            locations.push(
+                                {
+                                    "location": new Microsoft.Maps.Location(data[i].LATITUDE, data[i].LONGITUDE),
+                                    "locationInfo": {
+                                        "title": data[i].SCHOOL,
+                                        "subTitle": data[i].DATE + " (" + data[i].DEATHS + " deaths)",
+                                        "text": data[i].DEATHS,
+                                    }
                                 }
-                            }
-                        );
+                            );
+                        }
+
+                        var rect = Microsoft.Maps.LocationRect.fromLocations([locations[0].location, locations[1].location]);
+
+                        locations.forEach((location, idx) => {
+                            var pin = new Microsoft.Maps.Pushpin(location.location, location.locationInfo);
+
+                            map.entities.push(pin);
+                        });
+
+                        map.setView({ bounds: rect, padding: 80 });
                     }
-
-                    var rect = Microsoft.Maps.LocationRect.fromLocations([locations[0].location, locations[1].location]);
-
-                    locations.forEach((location, idx) => {
-                        var pin = new Microsoft.Maps.Pushpin(location.location, location.locationInfo);
-
-                        map.entities.push(pin);
-                    });
-
-                    map.setView({ bounds: rect, padding: 80 });
                 });
         }
     </script>
